anthem/src/main.css
:root {
    --tv-border: #1A1A1A;
    --tv-screen: #efefef;
    --brown: #35312F;
    --tbrown: #35312f81;
    --green: #596B64;
    --pink: #EAC3B7;
    --tan: #EEE5D1;
}

* {
    cursor: url('/cursor.png') 8 16, auto;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

#dvd-logo {
    position: absolute;
    font-size: 20px;
    background-color: #EAC3B7;
    padding: 5px 10px 5px 10px;
    width: 150px;
    text-align: center;
    color: var(--brown);
    border-radius: 100px;
    user-select: none;
    white-space: nowrap;
    box-shadow: 2px 3px 7px var(--tbrown);
    border: 1px solid var(--brown);
    font-style: italic;
}

.hero-container {
    color: var(--tv-border);
}

@media (max-width: 768px) {
    .hero-container {
        margin-top: 50px;
    }
}

@media (min-width: 768px) {
    .hero-container {
        margin-top: 90px;
    }
}

.menu {
    margin-top: 30px;
    margin-bottom: 30px;
}

.menu-button {
    cursor: url('/cursor-hover.png') 8 16, auto;
    display: block;
    background-color: clear;
    width: 270px;
    height: 188px;
    color: #fff;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
}

.menu-button-bg {
    cursor: url('/cursor-hover.png') 8 16, auto;
    background-color: #ACD5D3;
    width: 100%;
    height: 80%;
    border: 5px solid #596B64;
    border-radius: 3px;
}

.menu-button p {
    cursor: url('/cursor-hover.png') 8 16, auto;
    text-align: center;
    font-weight: bold;
    position: relative;
    top: 2%;
    color: var(--tv-border);
    font-size: 1.25rem;
    text-decoration: none;
}

.menu-button:hover p {
    text-decoration: underline;
}

.menu-button img {
    cursor: url('/cursor-hover.png') 8 16, auto;
    top: 0;
    width: 100%;
    height: 100%;
}

.border-overlay {
    position: fixed;
    pointer-events: none;
    z-index: 10;
}

@media (max-width: 768px) {
    .border-overlay {
        border: 50px solid var(--tv-border);
        border-radius: 100px;
        top: -25px;
        left: -25px;
        right: -25px;
        bottom: -25px;
    }
    .border-corner {
        width: 40px;
        height: 40px;
    }
}

@media (min-width: 768px) {
    .border-overlay {
        border: 100px solid var(--tv-border);
        border-radius: 200px;
        top: -50px;
        left: -50px;
        right: -50px;
        bottom: -50px;
    }
    .border-corner {
        width: 80px;
        height: 80px;
    }
}

.border-corner {
    background-color: var(--tv-border);
    position: fixed;
    pointer-events: none;
}

.top-left {
    top: 0;
    left: 0;
}

.top-right {
    top: 0;
    right: 0;
}

.bottom-left {
    bottom: 0;
    left: 0;
}

.bottom-right {
    bottom: 0;
    right: 0;
}

